--- a/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.css
+++ b/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.css
@@ -41,11 +41,15 @@ button {
 }
 
 #increment-btn {
+    background: darkgreen;
+}
+
+#decrement-btn {
     background: darkred;
 }
 
 #save-btn {
-    background: darkgreen;
+    background: darkblue;
 }
 
 #create-btn {
