--- a/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.css
+++ b/1. Build a Passenger Counter App/29. Trying to do some functional thing/index.css
@@ -12,9 +12,20 @@ h1 {
 }
 
 div {
-    display: flex;
-    text-align: center;
-    justify-content: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+span {
+    margin-top: 50%;
+    margin-bottom: 50%;
+
+    width: 80vw;
+
+    align-self: center;
+    background-color: aquamarine;
+    height: 2.8rem;
+    border-radius: 2rem;
 }
 
 h2 {
@@ -56,9 +67,9 @@ button {
     background: darkorange;
 }
 
-#choose-btn {
+/* #choose-btn {
     border-radius: 1rem;
     width: 54%;
     background: darkgray;
-}
+} */
 
